--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <!-- contact section start -->
       <div class="contact_section layout_padding margin_90">
          <div class="container">
-            <h1 class="contact_taital">What we do</h1>
+            <h1 class="contact_taital">Our Features</h1>
             <div class="news_section_2">
                <div class="row">
                   <div class="col-md-6">
