--- a/useful_links.html
+++ b/useful_links.html
@@ -64,8 +64,8 @@
         <article class="card test">
          <div class="card__inner">
            <div class="card__body card__body--front">
-             <h2 class="card__title"> <font face="Arial">Adore to the Core</font> </h2>
-                        <h3>Everyone needs help there is no shame in asking</h3>
+             <h2 class="card__title"> <font face="Arial">Hover here</font> </h2>
+                        <h3>Everyone needs help there is no shame in asking </h3>
            </div>
            <div class="card__body card__body--back">
 
