--- a/useful_links.html
+++ b/useful_links.html
@@ -64,7 +64,7 @@
         <article class="card test">
          <div class="card__inner">
            <div class="card__body card__body--front">
-             <h2 class="card__title"> <font face="Arial">Hover here</font> </h2>
+             <h2 class="card__title" style="font-family:cursive ;"> Hover here</h2>
                         <h3>Everyone needs help there is no shame in asking </h3>
            </div>
            <div class="card__body card__body--back">
@@ -72,14 +72,14 @@
              <ul>
                             <li>
                                 <a href="https://www.discord.com">
-                                    <font face="Arial"> <h2> Discord </h2> </font>
+                                     <h2 style="font-family:cursive ;" > Discord </h2> 
                                 </a>
                             </li>
                             <br>
 
                             <li>
                                 <a href="https://chattt.nikunjgoel2.repl.co/index.html">
-                                    <font face="Arial"> <h2> Aura space</h2> </font>
+                                     <h2 style="font-family:cursive ;"> Aura space</h2> 
                                 </a>
                             </li>
 
@@ -87,7 +87,7 @@
 
                             <li>
                                 <a href="https://www.instagram.com/Holistic_Aura">
-                                    <font face="Arial"> <h2> Instagram</h2></font>
+                                     <h2 style="font-family:cursive ;"> Instagram</h2>
                                 </a>
                             </li>
 
@@ -95,7 +95,7 @@
 
                             <li>
                                 <a href="https://www.instagram.com/Holistic_Aura">
-                                    <font face="Arial"> <h2> Twitter</h2></font>
+                                     <h2 style="font-family:cursive ;"> Twitter</h2>
                                 </a>
                             </li>
 
@@ -103,7 +103,7 @@
 
                             <li>
                                 <a href="https://www.instagram.com/Holistic_Aura">
-                                    <font face="Arial"> <h2> Songs</h2></font>
+                                     <h2 style="font-family:cursive ;"> Songs</h2>
                                 </a>
                             </li>
 
