--- a/useful_links.html
+++ b/useful_links.html
@@ -65,7 +65,7 @@
          <div class="card__inner">
            <div class="card__body card__body--front">
              <h2 class="card__title" style="font-family:cursive ;"> Hover here</h2>
-                        <h3>Everyone needs help there is no shame in asking </h3>
+                        <h3 style="font-family:cursive ;">Everyone needs help there is no shame in asking </h3>
            </div>
            <div class="card__body card__body--back">
 
